CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
CMAKE_POLICY(SET CMP0002 OLD)
PROJECT(rockpush C)

SET(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake)
SET(ROCK_SRC_DIR ${PROJECT_SOURCE_DIR}/src)
SET(ROCK_INCLUDE_DIR ${PROJECT_SOURCE_DIR}/include)
#SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR})

INCLUDE(FindPkgConfig)

PKG_SEARCH_MODULE(SDL2 REQUIRED sdl2)
PKG_SEARCH_MODULE(SDL2IMAGE REQUIRED SDL2_image>=2.0.0)
PKG_SEARCH_MODULE(SDL2TTF REQUIRED SDL2_ttf)
PKG_SEARCH_MODULE(SDL2MIXER REQUIRED SDL2_mixer)
#Hay que quitarlo
#PKG_SEARCH_MODULE(SDL2GFX REQUIRED SDL2_gfx)

INCLUDE_DIRECTORIES(
	${SDL2_INCLUDE_DIRS}
	${ROCK_INCLUDE_DIR}
	${ROCK_SRC_DIR}
)

ADD_EXECUTABLE(
	rockpush
	src/rockpush.c
	src/sprites.c
	src/map.c
	src/screen.c
	src/demoniete.c
	src/dummy.c
	src/fly.c
	src/guzzler.c
	src/rocco.c
	src/collision.c
	src/explosion.c
	src/gfx.c
	src/sfx.c
)

TARGET_LINK_LIBRARIES(
	rockpush
	m
	${SDL2_LIBRARIES}
	${SDL2IMAGE_LIBRARIES}
	${SDL2MIXER_LIBRARIES}
	${SDL2TTF_LIBRARIES}
)

SET_TARGET_PROPERTIES(
	rockpush
	PROPERTIES LINKER_LANGUAGE C
)

SET(CMAKE_BUILD_TYPE Release)
SET(CMAKE_CXX_FLAGS "-O3 -Wall")        ## Optimize
SET(CMAKE_EXE_LINKER_FLAGS "-s")  ## Strip binary

install(TARGETS rockpush RUNTIME DESTINATION bin)

